--- a/0329_003.css
+++ b/0329_003.css
@@ -1,3 +1,27 @@
+.hamburger {
+    background-color: #000000;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    display: block;
+  }
+
+.hamburger-line {
+    width: 40px;
+    height: 3px;
+    background-color: #ffffff;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    box-shadow: 0px 10px 0px #ffffff, 0px -10px 0px #ffffff;
+}
+  
+
 ul { /* 取消ul預設的內縮及樣式 */
     margin: 0;
     padding: 0;
