--- a/style05.css
+++ b/style05.css
@@ -77,7 +77,7 @@
 {
     display: flex;
     justify-content: center;
-    background-image: url(./city.jpg);
+    background-image: url(./Build_006_files/city.jpg);
 }
 
 .city-bg h3
